--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "url": "https://github.com/tfrere/angular-boilerplate.git"
   },
   "dependencies": {
-    "connect": "^3.4.0",
-    "serve-static": "^1.10.0"
+    "express": "^4.13.3"
   }
 }
