--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-boilerplate",
+  "name": "vitrinepeon",
   "version": "0.0.0",
-  "description": "Un super boilerplate pour angular",
+  "description": "la vitrine de peon",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -15,12 +15,12 @@
     "gulp-connect": "^2.2.0",
     "gulp-filter": "^3.0.1",
     "gulp-imagemin": "^2.3.0",
-    "gulp-inject": "^1.5.0",
     "gulp-jade": "^1.1.0",
     "gulp-jsmin": "^0.1.5",
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-minify-css": "^1.2.1",
     "gulp-open": "^1.0.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-protractor": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-run-sequence": "^0.3.2",
@@ -34,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tfrere/angular-boilerplate.git"
+    "url": "https://github.com/tfrere/gopeon.git"
   },
   "dependencies": {
     "express": "^4.13.3"
