--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "jquery": "~2.1.4",
     "waypoints": "~4.0.0",
     "angular-resource": "~1.4.7",
-    "angular-animate": "~1.4.7"
+    "angular-animate": "~1.4.7",
+    "ng-optimizely": "~0.2.2"
   },
   "devDependencies": {
     "neat": "~1.7.2",
