--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "waypoints": "~4.0.0",
     "angular-resource": "~1.4.7",
     "angular-animate": "~1.4.7",
-    "ng-optimizely": "~0.2.2"
+    "ng-optimizely": "~0.2.2",
+    "angular-cookies": "~1.4.8"
   },
   "devDependencies": {
     "neat": "~1.7.2",
