--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-resource": "~1.4.7",
     "angular-animate": "~1.4.7",
     "ng-optimizely": "~0.2.2",
-    "angular-cookies": "~1.4.8"
+    "angular-cookies": "~1.4.8",
+    "moment": "~2.10.6"
   },
   "devDependencies": {
     "neat": "~1.7.2",
