--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,14 @@
     "angular-animate": "~1.4.7",
     "ng-optimizely": "~0.2.2",
     "angular-cookies": "~1.4.8",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "angular-translate": "~2.8.1",
+    "angular-translate-loader-static-files": "~2.8.1",
+    "angular-translate-storage-local": "~2.8.1",
+    "angular-translate-handler-log": "~2.8.1",
+    "angular-dynamic-locale": "~0.1.29",
+    "angular-i18n": "~1.4.8",
+    "angular-sanitize": "~1.4.8"
   },
   "devDependencies": {
     "neat": "~1.7.2",
