--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "ee-image-worker": "^0.2.7",
     "es6-promise": "~2.0.1",
     "fbjs": "^0.4.0",
-    "firebase": "2.2.7",
     "fs": "0.0.2",
     "google-maps-api": "^2.0.0",
+    "history": "^1.17.0",
     "jquery": "^2.1.4",
     "json-loader": "^0.5.4",
     "linebreak": "^0.3.0",
@@ -23,17 +23,15 @@
     "moment": "^2.11.1",
     "object-assign": "^4.0.1",
     "react": "^0.14.3",
-    "react-canvas": "git+https://github.com/Flipboard/react-canvas.git",
     "react-color": "^1.3.0",
     "react-counter": "^1.1.0",
     "react-dom": "^0.14.3",
     "react-ease": "^1.0.7",
     "react-prism": "^3.0.0",
     "react-pure-render": "^1.0.2",
+    "react-router": "^1.0.3",
     "react-scroll": "^0.35.0",
-    "react-tooltip": "^0.9.8",
-    "react-webcam": "0.0.8",
-    "recordrtc": "^5.2.3"
+    "react-tooltip": "^0.9.8"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
@@ -69,12 +67,16 @@
     "webpack-dev-server": "^1.14.0",
     "webpack-notifier": "^1.2.1"
   },
+  "main": "server.js",
+  "scripts": {
+  },
   "scripts": {
     "browser": "nightwatch -e firefox,chrome",
     "clean": "rimraf $npm_package_config_buildDir && mkdir $npm_package_config_buildDir",
     "prewebpack": "npm run clean",
     "webpack": "webpack --colors --display-error-details --progress --config ./webpack/config",
-    "start": "NODE_ENV=dev node ./webpack/dev-server  --colors --display-error-details --progress",
+    "start": "node server.js",
+    "dev": "NODE_ENV=dev node ./webpack/dev-server  --colors --display-error-details --progress",
     "build": "npm run webpack",
     "prepublish": "npm run build",
     "publish": "aws s3 cp $npm_package_config_buildDir $npm_package_config_aws_s3_bucket --recursive --exclude \"*.DS_Store\""
