--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "author": "Tfrere thibaud",
   "license": "MIT",
   "private": true,
-  "script": {
-    "install": "sudo apt-get install libcv-dev libopencv-dev libhighgui-dev libjpeg-dev libpng-dev libwebp-dev libtiff-dev"
-  },
   "dependencies": {
+    "body-parser": "^1.14.1",
     "classnames": "^2.1.3",
+    "cors": "^2.7.1",
     "detectcss": "^1.0.2",
     "ee-image-worker": "^0.2.7",
     "es6-promise": "~2.0.1",
+    "express": "^4.13.3",
     "fbjs": "^0.4.0",
     "fs": "0.0.2",
     "google-maps-api": "^2.0.0",
@@ -21,6 +21,7 @@
     "linebreak": "^0.3.0",
     "lodash": "3.10.0",
     "moment": "^2.11.1",
+    "nodemailer": "^1.10.0",
     "object-assign": "^4.0.1",
     "react": "^0.14.3",
     "react-color": "^1.3.0",
@@ -31,6 +32,7 @@
     "react-pure-render": "^1.0.2",
     "react-router": "^1.0.3",
     "react-scroll": "^0.35.0",
+    "react-select": "^0.9.1",
     "react-tooltip": "^0.9.8"
   },
   "devDependencies": {
@@ -69,8 +71,7 @@
   },
   "main": "server.js",
   "scripts": {
-  },
-  "scripts": {
+    "installImageCropper": "sudo apt-get install libcv-dev libopencv-dev libhighgui-dev libjpeg-dev libpng-dev libwebp-dev libtiff-dev",
     "browser": "nightwatch -e firefox,chrome",
     "clean": "rimraf $npm_package_config_buildDir && mkdir $npm_package_config_buildDir",
     "prewebpack": "npm run clean",
