--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "FrameworkCSS",
+  "name": "Bluescreen",
   "version": "0.0.1",
   "author": "Tfrere thibaud",
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "body-parser": "^1.14.1",
+    "body-parser": "^1.15.0",
     "classnames": "^2.1.3",
     "cors": "^2.7.1",
     "detectcss": "^1.0.2",
     "ee-image-worker": "^0.2.7",
     "es6-promise": "~2.0.1",
-    "express": "^4.13.3",
+    "express": "^4.13.4",
     "fbjs": "^0.4.0",
     "fs": "0.0.2",
     "google-maps-api": "^2.0.0",
@@ -79,8 +79,7 @@
     "start": "node server.js",
     "dev": "NODE_ENV=dev node ./webpack/dev-server  --colors --display-error-details --progress",
     "build": "npm run webpack",
-    "prepublish": "npm run build",
-    "publish": "aws s3 cp $npm_package_config_buildDir $npm_package_config_aws_s3_bucket --recursive --exclude \"*.DS_Store\""
+    "prepublish": "npm run build"
   },
   "config": {
     "buildDir": "./build",
