--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-counter": "^1.1.0",
     "react-dom": "^0.14.3",
     "react-ease": "^1.0.7",
+    "react-gmaps": "^1.4.4",
     "react-prism": "^3.0.0",
     "react-pure-render": "^1.0.2",
     "react-router": "^1.0.3",
