--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "classnames": "^2.1.3",
+    "clipboard": "^1.5.15",
     "cors": "^2.7.1",
     "detectcss": "^1.0.2",
     "ee-image-worker": "^0.2.7",
