--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-translate-handler-log": "~2.8.1",
     "angular-dynamic-locale": "~0.1.29",
     "angular-i18n": "~1.4.8",
-    "angular-sanitize": "~1.4.8"
+    "angular-sanitize": "~1.4.8",
+    "moment-duration-format": "^1.3.0"
   },
   "devDependencies": {
     "neat": "~1.7.2",
