--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gulp-livereload": "^3.8.0",
     "gulp-plumber": "^1.0.1",
     "mailchimp-api": "^2.0.7",
+    "moment-duration-format": "^1.3.0",
     "phantomjs": "^1.9.18",
     "prerender-node": "^2.1.0",
     "request": "^2.65.0"
