--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-livereload": "^3.8.0",
     "gulp-plumber": "^1.0.1",
+    "joi": "^10.2.0",
     "mailchimp-api": "^2.0.7",
     "moment-duration-format": "^1.3.0",
     "phantomjs": "^1.9.18",
