--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.0",
+    "beeper": "^1.1.1",
+    "caniuse": "^0.1.3",
+    "caniuse-db": "^1.0.30000694",
     "del": "^2.0.2",
     "gh-pages": "^1.0.0",
     "gulp": "^3.9.0",
