--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gulp-plumber": "^1.0.1",
     "joi": "^10.2.0",
     "moment-duration-format": "^1.3.0",
+    "phantomcss": "^1.2.0",
     "request": "^2.65.0"
   }
 }
